src/styles/app.scss
$theme-colors: (
  "primary": #ffb800,
);

@import "../../node_modules/bootstrap/scss/bootstrap";

* {
  padding: 0;
  margin: 0;
}

.mh-100vh {
  min-height: 100vh;
}

.flex-1 {
  flex: 1;
}

.signin-img {
  background-image: url(https://images.pexels.com/photos/7245366/pexels-photo-7245366.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);
}

.img-overlay {
  position: relative;
  background-image: url(../assets/signin.png);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  &::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 5px;
    bottom: 0;
    background-color: rgba($color: #000000, $alpha: 0.3);
  }
}

.eventModalBox {
  height: 92vh;
  @media only screen and (max-width: 500px) {
    height: 100%;
  }
}
.eventModalDetailsBox {
  overflow: auto;
  @media only screen and (max-width: 500px) {
    overflow: hidden;
  }
}

.w-30 {
  width: 30%;
  @media only screen and (max-width: 500px) {
    width: 100%;
  }
}
.w-70 {
  width: 70%;
  @media only screen and (max-width: 500px) {
    width: 100%;
  }
}

.eventBox {
  min-width: 265px;
  margin: " 10px 10px";
  overflow-y: auto;
  position: relative;
  @media only screen and (max-width: 500px) {
    min-width: 38vh;
  }
}
td {
  vertical-align: middle;
}

.main-img-container {
  background-image: url("../assets/main-image-container.png");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  min-height: 500px;
  position: relative;
  &:before {
    content: " ";
    position: absolute;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
    background-color: rgba($color: #000000, $alpha: 0.7);
    z-index: 0;
  }
  .content {
    position: absolute;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
    z-index: 1;
  }
}
.about-img-container {
  background-image: url("../assets/about-img.png");
  background-repeat: no-repeat;
  background-size: cover;
  min-height: 400px;
  position: relative;
  background-position: center;
  &:before {
    content: " ";
    position: absolute;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
    background-color: rgba($color: #000000, $alpha: 0.4);
    z-index: 0;
  }
}

.IFCMenu {
  list-style: none;
  @media only screen and (max-width: 500px) {
    width: 100% !important;
    background-color: rgba(197, 198, 199, 1) !important;

    overflow: auto;
  }
}

/* width */
::-webkit-scrollbar {
  width: 7px;
  height: 7px;
}

/* Track */
::-webkit-scrollbar-track {
  background: rgba(0, 0, 0, 0);
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: rgba($color: #000, $alpha: 0.07);
  border-radius: 10px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: rgba($color: #000, $alpha: 0.2);
  transition: all 0.2s ease-out;
}

